# onca

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md
docs/: memory-map.md
src/: bios.c  bios.h  blitter.c  blitter.h  gpu.c  gpu.h  libretro.h  libretro_core.c  m68k.c  m68k.h  memory.c  memory.h  op.c  op.h
tests/: test_gpu.c  test_m68k.c  test_op.c
tools/: audiorun.c  decision.c  dumpbuf.c  gamerun.c  gpudis.c  gputrace.c  irqtest.c  jagrun.c  kickprobe.c  libretro_host.c  makefakebios.c  menurun.c  opdump.c  render.c  rendertrace.c  rsacheck.py  trace.c  viewprobe.c
